cabal-version:      >= 1.10
name:               ghc-t21141
version:            0.1.0.0
author:             Ryan Scott
maintainer:         ryan.gl.scott@gmail.com
build-type:         Simple
extra-source-files:
    README.md

test-suite ghc-t21141
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base, hspec, QuickCheck
    hs-source-dirs:   test
    default-language: Haskell98
    ghc-options:      -Wall
